--- a/src/pages/dashboard.css
+++ b/src/pages/dashboard.css
@@ -1,29 +1,34 @@
-.dashboard{
-    color: #2C514C;
-    background-color: #9ec5ab;
-    border: 2px solid  #2C514C;
-    border-radius: 5px;
+.dashboard {
+  color: #2c514c;
+  background-color: #9ec5ab;
+  border: 2px solid #2c514c;
+  border-radius: 5px;
 }
 .mybutton {
-    position: relative;
-   
-    
-   
-    border-radius: 18px;
-    background-color: #2C514C;
-    border: solid 2px transparent;
-    color: #fff;
-    font-size: 18px;
-    font-weight: bold;
-    cursor: pointer;
-    transition: all .1s ease-in-out;
+  position: relative;
+
+  border-radius: 18px;
+  background-color: #2c514c;
+  border: solid 2px transparent;
+  color: #fff;
+  font-size: 18px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: all 0.1s ease-in-out;
 }
-    
-    .mybutton:hover {
-      color: #2C514C;
-      background-color: transparent;
-      border-color: #2C514C;
-      transition: all .1s ease-in-out;
-    }
-    
-  
+
+.mybutton:hover {
+  color: #2c514c;
+  background-color: transparent;
+  border-color: #2c514c;
+  transition: all 0.1s ease-in-out;
+}
+
+.editRemove {
+  border: none;
+  background-color: transparent;
+}
+
+.editRemove:focus {
+    outline: none;
+}
