--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,5 +10,189 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+} */
+.myNav{
+  color: #2C514C;
+  background-color: #9ec5ab;
+  font-weight: bold;
 }
 
+input {
+  width: 100%;
+}
+
+.dashboard {
+  color: #2c514c;
+  background-color: #9ec5ab;
+  border: 2px solid #2c514c;
+  border-radius: 5px;
+}
+.mybutton {
+  position: relative;
+  border-radius: 18px;
+  background-color: #2c514c;
+  border: solid 2px transparent;
+  color: #fff;
+  font-size: 18px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: all 0.1s ease-in-out;
+}
+
+.mybutton:hover {
+  color: #2c514c;
+  background-color: #fff;
+  border-color: #2c514c;
+  transition: all 0.1s ease-in-out;
+}
+
+.mybutton:focus {
+  outline: none;
+}
+
+.mybuttonCancel {
+  position: relative;
+  border-radius: 18px;
+  background-color: #fff;
+  border: solid 2px #2c514c;
+  color: #2c514c;
+  font-size: 18px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: all 0.1s ease-in-out;
+}
+
+.mybuttonCancel:hover {
+  color: #fff;
+  background-color: red;
+  border-color: red;
+  transition: all 0.1s ease-in-out;
+}
+
+.mybuttonCancel:focus {
+  outline: none;
+}
+
+.ReactModal__Html--open,
+.ReactModal__Body--open {
+  overflow: hidden;
+}
+
+.ReactModal__Overlay {
+  position: fixed;
+  z-index: 999999;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.3);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.ReactModal__Content {
+  background: white;
+  outline: none;
+  width: 50rem;
+  
+  max-height: calc(100vh - 20px);
+  box-shadow: 0 0 34px 0 rgba(0, 0, 0, 0.24);
+  overflow-y: auto;
+  position: relative;
+}
+
+.Modal {
+  position: absolute;
+  top: 10px;
+  
+  background-color: white;
+  width: 98%;
+  font-weight: bold;
+  color: #2c514c;
+  border-radius: 20px;
+  border: 2px solid #2c514c;
+}
+
+@media (min-width: 768px) {
+  .Modal {
+    position: absolute;
+
+    left: 10%;
+    right: auto;
+    
+
+    width: 80%;
+  }
+}
+
+.fancy-checkbox input[type="checkbox"],
+.fancy-checkbox .checked {
+  display: none;
+}
+.fancy-checkbox input[type="checkbox"]:checked ~ .checked {
+  display: inline-block;
+  /* color: red; */
+}
+
+.fancy-checkbox input[type="checkbox"]:checked ~ .unchecked {
+  display: none;
+}
+.attendanceRecord{
+  color: #2C514C;
+  font-weight: bold;
+  background-color: #fff;
+  border-radius: 18px;
+  border: solid 2px  #2C514C;
+  width: 80%;
+}
+.editRemove {
+  border: none;
+  background-color: transparent;
+}
+
+.editRemove:focus {
+    outline: none;
+}
+.edits {
+  -ms-flex: 0 0 90px;
+  flex: 0 0 90px;
+}
+
+.addStudent {
+  -ms-flex: 0 0 90px;
+  flex: 0 0 90px;
+}
+.Modal2 {
+  position: absolute;
+  top: 20%;
+  left:auto;
+  bottom: auto;
+  background-color: white;
+  width: auto;
+  padding-left:30px;
+  padding-right:27px;
+  font-weight: bold;
+  color: #2C514C;
+}
+
+@media (min-width: 768px){
+
+.Modal2 {
+  position: absolute;
+  top: 20%;
+  left: auto;
+  right: auto;
+  bottom: auto;
+  border-radius: 20px;
+  border: 2px solid #2C514C;
+}
+
+}
+.listItem:nth-child(odd) {
+  background-color:#F8F8F8;
+}
+.icons {
+  -ms-flex: 0 0 90px;
+  flex: 0 0 90px;
+}
