users setup with firebase doc

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,14 +1,13 @@
-$primaryColor:  #036937;
-$secondaryColor:#fff;
-$tertiaryColor: lighten( desaturate( adjust-hue( $primaryColor, -1deg ), 69 ), 63 );
+$primaryColor: #036937;
+$secondaryColor: #fff;
+$tertiaryColor: lighten(desaturate(adjust-hue($primaryColor, -1deg), 69), 63);
 $cancelColor: #690403;
 
-nav
-{
-overflow: auto;
+nav {
+  overflow: auto;
 }
 
-.jumbotron{
+.jumbotron {
   background-image: url("/backgroundImage.jpg");
   background-attachment: fixed;
   background-size: cover;
@@ -17,213 +16,209 @@ overflow: auto;
   border-radius: 0px;
   height: 100%;
   width: 100vw;
-  position:absolute;
+  position: absolute;
   background-position: left 50% top 0;
- }
-
-  @media (max-width: 768px) {
-    #logoTitle{
-      display: none;
-    }
-   }
-
-.textC{
-    color: $primaryColor;
-    font-weight: bold;
-}
-.textI{
-    color: $secondaryColor;
-    font-weight: bold;
 }
 
-.myFoot{
-    color:$secondaryColor;
-    background-color: $primaryColor;
-    font-weight: 500;
-    
+@media (max-width: 768px) {
+  #logoTitle {
+    display: none;
+  }
 }
-.myNav{
-    color:$secondaryColor;
-    background-color: $primaryColor;
-    font-weight: 700;
-  }
-  
-  input {
-    width: 100%;
-  }
-  
-  .dashboard {
-    color: $primaryColor;
-    background-color: $tertiaryColor;
-    border: 2px solid $primaryColor;
-    border-radius: 5px;
-  }
-  .mybuttonAlt {
-    background-color: $tertiaryColor;
-    cursor: pointer;
-    transition: all 0.1s ease-in-out;
-  }
-  
-  .mybuttonAlt:hover {
-    background-color: $secondaryColor;
-  }
-  
-  .mybuttonAlt:focus {
-    outline: none;
-  }
 
-  .mybutton {
-    position: relative;
-    border-radius: 18px;
-    background-color: $primaryColor;
-    border: solid 2px transparent;
-    color: $secondaryColor;
-    font-size: 18px;
-    font-weight: bold;
-    cursor: pointer;
-    transition: all 0.1s ease-in-out;
-  }
-  
-  .mybutton:hover {
-    color: $primaryColor;
-    background-color: $tertiaryColor;
-    border-color: $primaryColor;
-  }
-  
-  .mybutton:focus {
-    outline: none;
-  }
-  
-  .mybuttonCancel {
-    position: relative;
-    border-radius: 18px;
-    background-color: $tertiaryColor;
-    border: solid 2px $primaryColor;
-    color: $primaryColor;
-    font-size: 18px;
-    font-weight: bold;
-    cursor: pointer;
-    transition: all 0.1s ease-in-out;
-  }
-  
-  .mybuttonCancel:hover {
-    color: $secondaryColor;
-    background-color: $cancelColor;
-    border-color: $cancelColor;
-    transition: all 0.1s ease-in-out;
-  }
-  
-  .mybuttonCancel:focus {
-    outline: none;
-  }
-  
-  .ReactModal__Html--open,
-  .ReactModal__Body--open {
-    overflow: hidden;
-  }
-  
-  .ReactModal__Overlay {
-    position: fixed;
-    z-index: 999999;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background: rgba(0, 0, 0, 0.3);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .ReactModal__Content {
-    background: white;
-    outline: none;
-    width: 50rem;
-    
-    max-height: calc(100vh - 20px);
-    box-shadow: 0 0 34px 0 rgba(0, 0, 0, 0.24);
-    overflow-y: auto;
-    position: relative;
-  }
-  
+.textC {
+  color: $primaryColor;
+  font-weight: bold;
+}
+.textI {
+  color: $secondaryColor;
+  font-weight: bold;
+}
+
+.myFoot {
+  color: $secondaryColor;
+  background-color: $primaryColor;
+  font-weight: 500;
+}
+.myNav {
+  color: $secondaryColor;
+  background-color: $primaryColor;
+  font-weight: 700;
+}
+
+input {
+  width: 100%;
+}
+
+.dashboard {
+  color: $primaryColor;
+  background-color: $tertiaryColor;
+  border: 2px solid $primaryColor;
+  border-radius: 5px;
+}
+.mybuttonAlt {
+  background-color: $tertiaryColor;
+  cursor: pointer;
+  transition: all 0.1s ease-in-out;
+}
+
+.mybuttonAlt:hover {
+  background-color: $secondaryColor;
+}
+
+.mybuttonAlt:focus {
+  outline: none;
+}
+
+.mybutton {
+  position: relative;
+  border-radius: 18px;
+  background-color: $primaryColor;
+  border: solid 2px transparent;
+  color: $secondaryColor;
+  font-size: 18px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: all 0.1s ease-in-out;
+}
+
+.mybutton:hover {
+  color: $primaryColor;
+  background-color: $tertiaryColor;
+  border-color: $primaryColor;
+}
+
+.mybutton:focus {
+  outline: none;
+}
+
+.mybuttonCancel {
+  position: relative;
+  border-radius: 18px;
+  background-color: $tertiaryColor;
+  border: solid 2px $primaryColor;
+  color: $primaryColor;
+  font-size: 18px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: all 0.1s ease-in-out;
+}
+
+.mybuttonCancel:hover {
+  color: $secondaryColor;
+  background-color: $cancelColor;
+  border-color: $cancelColor;
+  transition: all 0.1s ease-in-out;
+}
+
+.mybuttonCancel:focus {
+  outline: none;
+}
+
+.ReactModal__Html--open,
+.ReactModal__Body--open {
+  overflow: hidden;
+}
+
+.ReactModal__Overlay {
+  position: fixed;
+  z-index: 999999;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.3);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.ReactModal__Content {
+  background: white;
+  outline: none;
+  width: 50rem;
+
+  max-height: calc(100vh - 20px);
+  box-shadow: 0 0 34px 0 rgba(0, 0, 0, 0.24);
+  overflow-y: auto;
+  position: relative;
+}
+
+.Modal {
+  position: absolute;
+  top: 10px;
+
+  background-color: white;
+  width: 98%;
+  font-weight: bold;
+  color: $primaryColor;
+  border-radius: 20px;
+  border: 2px solid $primaryColor;
+}
+
+@media (min-width: 768px) {
   .Modal {
     position: absolute;
-    top: 10px;
-    
-    background-color: white;
-    width: 98%;
-    font-weight: bold;
-    color: $primaryColor;
-    border-radius: 20px;
-    border: 2px solid $primaryColor;
-  }
-  
-  @media (min-width: 768px) {
 
-    .Modal {
-      position: absolute;
-  
-      left: 10%;
-      right: auto;
-      
-  
-      width: 80%;
-    }
-  }
-  
-  .fancy-checkbox input[type="checkbox"],
-  .fancy-checkbox .checked {
-    display: none;
-  }
-  .fancy-checkbox input[type="checkbox"]:checked ~ .checked {
-    display: inline-block;
-    /* color: red; */
-  }
-  
-  .fancy-checkbox input[type="checkbox"]:checked ~ .unchecked {
-    display: none;
-  }
-  .attendanceRecord{
-    color: $primaryColor;
-    font-weight: bold;
-    background-color: $secondaryColor;
-    border-radius: 18px;
-    border: solid 2px  $primaryColor;
+    left: 10%;
+    right: auto;
+
     width: 80%;
   }
-  .editRemove {
-    border: none;
-    color: $primaryColor;
-    background-color: transparent;
-  }
-  
-  .editRemove:focus {
-      outline: none;
-  }
-  .edits {
-    -ms-flex: 0 0 90px;
-    flex: 0 0 90px;
-  }
-  
-  .addStudent {
-    -ms-flex: 0 0 90px;
-    flex: 0 0 90px;
-  }
-  .Modal2 {
-    position: absolute;
-    top: 20%;
-    left:auto;
-    bottom: auto;
-    background-color: white;
-    width: auto;
-    padding-left:30px;
-    padding-right:27px;
-    font-weight: bold;
-    color: $primaryColor;
-  }
-  
-  @media (min-width: 768px){
-  
+}
+
+.fancy-checkbox input[type="checkbox"],
+.fancy-checkbox .checked {
+  display: none;
+}
+.fancy-checkbox input[type="checkbox"]:checked ~ .checked {
+  display: inline-block;
+  /* color: red; */
+}
+
+.fancy-checkbox input[type="checkbox"]:checked ~ .unchecked {
+  display: none;
+}
+.attendanceRecord {
+  color: $primaryColor;
+  font-weight: bold;
+  background-color: $secondaryColor;
+  border-radius: 18px;
+  border: solid 2px $primaryColor;
+  width: 80%;
+}
+.editRemove {
+  border: none;
+  color: $primaryColor;
+  background-color: transparent;
+}
+
+.editRemove:focus {
+  outline: none;
+}
+.edits {
+  -ms-flex: 0 0 90px;
+  flex: 0 0 90px;
+}
+
+.addStudent {
+  -ms-flex: 0 0 90px;
+  flex: 0 0 90px;
+}
+.Modal2 {
+  position: absolute;
+  top: 20%;
+  left: auto;
+  bottom: auto;
+  background-color: white;
+  width: auto;
+  padding-left: 30px;
+  padding-right: 27px;
+  font-weight: bold;
+  color: $primaryColor;
+}
+
+@media (min-width: 768px) {
   .Modal2 {
     position: absolute;
     top: 20%;
@@ -233,12 +228,82 @@ overflow: auto;
     border-radius: 20px;
     border: 2px solid $primaryColor;
   }
-  
+}
+.listItem:nth-child(odd) {
+  background-color: #f8f8f8;
+}
+.icons {
+  -ms-flex: 0 0 90px;
+  flex: 0 0 90px;
+}
+/* Basic button styling */
+.saveChanges{
+    width: 100vw;
+    height: 50px;
+    position: fixed;
+    bottom: 55px;
+    z-index: 1;
+    background-color: #FFF3CD;
+}
+.pulsingButton {
+  display: inline-block;
+  position: relative;
+  text-align: center;
+  margin-top:9px;
+  box-shadow: 0 0 0 0 green;
+  border-radius: 18px;
+  border: solid 2px transparent;
+  background-color: $primaryColor;
+  -webkit-animation: pulsing 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
+  -moz-animation: pulsing 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
+  -ms-animation: pulsing 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
+  animation: pulsing 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
+  color: $secondaryColor;
+  font-size: 18px;
+  font-weight: bold;
+  transition: all 300ms ease-in-out;
+}
+
+/* Comment-out to have the button continue to pulse on mouseover */
+
+.pulsingButton:hover {
+  -webkit-animation: none;
+  -moz-animation: none;
+  -ms-animation: none;
+  animation: none;
+  color:$primaryColor;
+  background-color: $secondaryColor;
+  border-color: $primaryColor;
+}
+
+/* Animation */
+
+@-webkit-keyframes pulsing {
+  to {
+    box-shadow: 0 0 0 10px transparent;
   }
-  .listItem:nth-child(odd) {
-    background-color:#F8F8F8;
+}
+
+@-moz-keyframes pulsing {
+  to {
+    box-shadow: 0 0 0 10px transparent;
   }
-  .icons {
-    -ms-flex: 0 0 90px;
-    flex: 0 0 90px;
+}
+
+@-ms-keyframes pulsing {
+  to {
+    box-shadow: 0 0 0 10px transparent;
   }
+}
+
+@keyframes pulsing {
+  to {
+    box-shadow: 0 0 0 10px transparent;
+  }
+}
+
+@media (min-width: 768px) {
+  .navbar-expand-lg .navbar-collapse {
+      height: auto !important;
+  }
+}
