--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,27 @@ nav {
   overflow: auto;
 }
 
+.slider{
+  color: white; 
+  font-size: 3.5em; 
+  font-weight: 900; 
+  text-align: center; 
+  text-shadow:
+   -2px -2px 0 $primaryColor,  
+    2px -2px 0 $primaryColor,
+    -2px 2px 0 $primaryColor,
+     2px 2px 0 $primaryColor; 
+}
+
+h3.slider{font-size: 2.5em;}
+
+
+@media (min-width: 768px) {  
+  .slider {font-size:5rem;}
+  h3.slider{font-size:3rem;}
+  
+}
+
 .jumbotron {
   background-image: url("/backgroundImage.jpg");
   background-attachment: fixed;
